[tool.poetry]
name = "repl_nix_amulet-server"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.3"
Flask-Cors = "^3.0.10"
openai = "^0.27.2"
python-dotenv = "^1.0.0"
pydub = "^0.25.1"
tiktoken = "^0.3.3"
psutil = "^5.9.5"
audiosegment = "^0.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
